# masking

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Makefile  README.md  addons.txt  prova.py  pyproject.toml
data/: MaskingData.csv  MaskingData_de.csv  MaskingData_en.csv
docs/: available_modules.md  installation.md  poetry.md
docs/demask/: demask.md
docs/mask/: fake-date.md  fake-plz.md  mask.md  operation_hash.md  pipeline.md  presidio.md
docs/operations/: operation_dict.md  operation_fake.md  operation_fake_date.md  operation_fake_name.md  operation_fake_plz.md  operation_hash.md  operation_med_stats.md  operation_null.md  operation_presidio.md  operation_presidio_dict.md  operation_string_match.md  operation_string_match_dict.md  operation_yyyy_hash.md  operations.md
scripts/: add_row_to_data.py  run.py  run_demasking.py  run_polars.py  run_spark.py  train_spacy.py  try_faker.py  try_presidio.py  try_string_match.py
src/demasking/: operation.py  pipeline.py
src/masking/: delimiters.py  hash.py  operation.py  pipeline.py
src/masking/base_concordance_table/: concordance_table.py
src/masking/base_operations/: operation.py  operation_dict.py  operation_fake.py  operation_fake_date.py  operation_fake_name.py  operation_fake_plz.py  operation_hash.py  operation_match.py  operation_med_stats.py  operation_null.py  operation_plz.py  operation_presidio.py  operation_presidio_dict.py  operation_string_match.py  operation_string_match_dict.py  operation_yyyy_hash.py
src/masking/base_pipeline/: pipeline.py
src/masking/demask/: operation.py
src/masking/fake/: faker.py
src/masking/faker/: date.py  name.py  plz.py
src/masking/faker/sources/: AMTOVZ_CSV_LV95.csv  firstnames2024.feather
src/masking/mask/: pipeline.py
src/masking/mask/fake/: date.py  name.py  plz.py
src/masking/mask/operations/: __init__.py  operation.py  operation_date.py  operation_dict.py  operation_fake_date.py  operation_fake_name.py  operation_fake_plz.py  operation_hash.py  operation_match.py  operation_med_stats.py  operation_plz.py  operation_presidio.py  operation_presidio_dict.py  operation_string_match.py  operation_string_match_dict.py  operation_yyyy_hash.py
src/masking/mask_polars/: pipeline.py
src/masking/mask_polars/operations/: operation.py  operation_fake_date.py  operation_fake_name.py  operation_fake_plz.py  operation_hash.py  operation_med_stats.py  operation_presidio.py  operation_presidio_dict.py  operation_string_match.py  operation_string_match_dict.py  operation_yyyy_hash.py
src/masking/mask_spark/: pipeline.py
src/masking/mask_spark/operations/: operation.py  operation_dict.py  operation_fake_date.py  operation_fake_name.py  operation_fake_plz.py  operation_hash.py  operation_match.py  operation_med_stats.py  operation_plz.py  operation_presidio.py  operation_presidio_dict.py  operation_string_match.py  operation_string_match_dict.py  operation_yyyy_hash.py
src/masking/operations/: __init__.py  operation.py  operation_date.py  operation_hash.py  operation_plz.py  operation_presidio.py
src/masking/utils/: delimiters.py  entity_detection.py  multi_nested_dict.py  presidio_handler.py  string_handler.py  string_match_handler.py
src/presidio_recognizers/: __init__.py
tests/: conftest.py  generate_hashed_tests.py
tests/base_operations/: addons.txt  conftest.py  operation_inheritance.py  test_operation.py  test_operation_hash.py  test_operation_inheritance.py  test_operation_yyyy_hash.py  testsuit_operation_inheritance.py
tests/utils/: test_hash.py  test_multi_nested_dict.py  test_string_handler.py
