###################### Ruff ######################
[tool.ruff]
preview = true
target-version = "py311"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
dummy-variable-rgx = "^_$"
ignore = [
    "CPY001",  # flake8-copyright
    "D1",      # undocumented-*
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "E501",    # line-too-long
    "BLE001",  # catch-blind-exceptions
    "COM812",  # missing-trailing-commas
    "PLR0917", # too-many-positional-arguments
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201", "ANN2", "ERA001", "INP001", "S106", "ARG005"]
"tests/*" = ["S101", "SLF0", "PLC0415"]

############################### UV ################################

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "masking"
version = "0.1.0"
description = "Python package for the masking of Personal Identifiable Information (PII) data consisting of a table."
authors = [{ name = "Marco Petrella", email = "marco.petrella@d-one.ai" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.2",
    "presidio-analyzer>=2.2.356",
    "pyspark==4.0.0",
    "pyarrow>=17.0.0",
    "faker>=26.0.0",
    "spacy>=3.8.0",
    "dateparser>=1.2.0",
    "presidio-anonymizer>=2.2.356",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.4.8",
    "pre-commit>=3.7.1",
    "en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl",
    "de-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl",
    "pytest>=8.3.5",
    "argparse>=1.4.0",
    "spacy-lookups-data>=1.0.5",
]
